# x13-seasonal-adjustment

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  pyproject.toml  setup_github.ps1  setup_github.sh  test_comprehensive.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: Makefile  README.md  conf.py  index.rst
examples/: README.md
src/x13_seasonal_adjustment/: __init__.py  exceptions.py  logging_config.py
src/x13_seasonal_adjustment/arima/: auto_arima.py  model_selection.py
src/x13_seasonal_adjustment/core/: __init__.py  decomposition.py  result.py  x13.py
src/x13_seasonal_adjustment/diagnostics/: quality.py
src/x13_seasonal_adjustment/tests/: __init__.py  seasonality_tests.py
src/x13_seasonal_adjustment/utils/: __init__.py  preprocessing.py  validation.py
tests/: test_basic.py  test_comprehensive_professional.py  test_performance.py
